--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express": "^4.14.0",
     "googleapis": "^12.4.0",
     "knex": "^0.11.10",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "path": "^0.12.7",
     "pg": "^6.1.0",
     "react": "^15.3.1",
