--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "browserify": "^13.1.0",
     "browserify-middleware": "^7.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "googleapis": "^12.4.0",
     "knex": "^0.11.10",
     "passport": "^0.3.2",
