--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pg": "^6.1.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-router": "^2.7.0",
     "react-youtube": "^7.0.1",
     "request": "^2.74.0",
     "underscore": "^1.8.3"
