--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
 version: '3.7'
 
+networks:
+    app-network:
+        driver: bridge
+
 services:
-    youtube_clipper_database:
-        container_name: youtube_clipper_database
+    database:
+        container_name: database
         image: postgres
         restart: always
         environment:
@@ -13,3 +17,24 @@ services:
             - POSTGRES_DB=youtube-clipper-dev
         ports:
             - "5432:5432"
+        networks:
+            - app-network
+    backend:
+        container_name: backend
+        build:
+            context: ./server
+            dockerfile: Dockerfile
+        command: bash -c "yarn run db:migrate && yarn start"
+        restart: always
+        volumes: 
+            - ./server:/server
+        ports:
+            - "3000:3000"
+        expose:
+            - "3000"
+        environment:
+            - NODE_ENV=development
+        networks:
+            - app-network
+        depends_on:
+            - database
