--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "nodemon ./src/index.js",
+    "start": "nodemon",
+    "test": "jest",
     "db:migrate": "sequelize --options-path ./.sequelizerc db:migrate",
     "db:migrate:undo": "sequelize --options-path ./.sequelizerc db:migrate:undo"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "googleapis": "^73.0.0",
@@ -25,6 +27,10 @@
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "sinon": "^10.0.0",
+    "supertest": "^6.1.3"
   }
 }
