--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "start": "webpack serve --open --config webpack.config.js",
+    "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-youtube": "^7.13.1"
   },
   "devDependencies": {
