--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,31 @@ services:
             - "5432:5432"
         networks:
             - app-network
+    frontend:
+        container_name: frontend
+        build:
+            context: ./client
+            dockerfile: Dockerfile
+        command: bash -c "yarn start"
+        restart: always
+        volumes:
+            - ./client:/frontend
+        ports:
+            - "8080:8080"
+        expose:
+            - "8080"
+        environment:
+            - NODE_ENV=development
+        networks:
+            - app-network
+        depends_on:
+            - backend
     backend:
         container_name: backend
         build:
             context: ./server
             dockerfile: Dockerfile
-        command: bash -c "yarn run db:migrate && yarn start"
+        command: bash -c "yarn run db:migrate && yarn run seed:all && yarn start"
         restart: always
         volumes: 
             - ./server:/server
@@ -38,3 +57,16 @@ services:
             - app-network
         depends_on:
             - database
+    nginx:
+        container_name: nginx
+        image: nginx:latest
+        ports:
+            - "80:80"
+        networks:
+            - app-network
+        volumes:
+            - ./nginx/:/etc/nginx/conf.d/
+        depends_on:
+            - frontend
+            - backend
+
