Adds Google OAuth

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,10 @@ upstream backend_server {
     server backend:8081 fail_timeout=0;
 }
 
+# upstream keycloak_server {
+#     server keycloak:8080 fail_timeout=0;
+# }
+
 server {
     listen 80 deferred;
 
@@ -27,6 +31,12 @@ server {
         try_files /dev/null @proxy_to_backend;
     }
 
+    # location ^~ /auth {
+    #     # checks for static file, if not found proxy to app
+    #     add_header 'Access-Control-Allow-Origin' *;
+    #     try_files /dev/null @proxy_to_keycloak;
+    # }
+
     location @proxy_to_frontend {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # enable this if and only if you use HTTPS
@@ -47,5 +57,21 @@ server {
         # redirects; we set the Host: header above already.
         proxy_redirect off;
         proxy_pass http://backend_server;
+    }
+
+    # location @proxy_to_keycloak {
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     # enable this if and only if you use HTTPS
+    #     # proxy_set_header X-Forwarded-Proto https;
+    #     proxy_set_header Host $host;
+    #     # We don't want nginx trying to do something clever with
+    #     # redirects; we set the Host: header above already.
+    #     proxy_redirect off;
+    #     proxy_pass http://keycloak_server;
+    # }
+
+    error_page 500 502 503 504 /500.html;
+    location = /500.html {
+        root /var/www/html;
     }
 }
