--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
             - POSTGRES_HOST=youtube_mashup_database
-            - POSTGRES_PORT=5432
+            - POSTGRES_PORT=5433
             - POSTGRES_DB=youtube-mashup-dev
         ports:
             - "5432:5432"
@@ -48,11 +48,11 @@ services:
         volumes: 
             - ./server:/server
         ports:
-            - "3000:3000"
+            - "8081:8081"
         expose:
-            - "3000"
-        environment:
-            - NODE_ENV=development
+            - "8081"
+        env_file:
+            - ./server/src/config/env
         networks:
             - app-network
         depends_on:
@@ -69,4 +69,3 @@ services:
         depends_on:
             - frontend
             - backend
-
