--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2": "^1.5.0",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
     "sequelize-cli": "^6.2.0"
