--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-notifications-component": "^3.1.0",
     "react-player": "^2.9.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
