Auth changes, comments changes, more changes than I care to admit

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,13 +22,13 @@ server {
     location / {
         # checks for static file, if not found proxy to app
         add_header 'Access-Control-Allow-Origin' *;
-        try_files /dev/null @proxy_to_frontend;
+        try_files $uri @proxy_to_frontend;
     }
 
     location ^~ /api {
         # checks for static file, if not found proxy to app
         add_header 'Access-Control-Allow-Origin' *;
-        try_files /dev/null @proxy_to_backend;
+        try_files $uri @proxy_to_backend;
     }
 
     # location ^~ /auth {
