--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "node-polyfill-webpack-plugin": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-notifications-component": "^3.1.0",
