--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "seed:all": "sequelize --options-path ./.sequelizerc db:seed:all"
   },
   "dependencies": {
+    "connect-session-sequelize": "^7.1.1",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
